unpackaged/main/default/objects/Advancement_Request__c/Advancement_Request__c.object-meta.xml
<CustomObject>
    <description>Custom object to log requests from a development or advancement team</description>
    <label>Advancement Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Advancement Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advancement Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>