unpackaged/main/default/objects/Advancement_Request__c/fields/Advancement_Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Requester_Name__c</fullName>
    <description>The name of the person who submitted the request.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the person who submitted the request.</inlineHelpText>
    <label>Advancement Requester Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>