unpackaged/main/default/objects/Advancement_Request__c/fields/Campus_Office_of_Requester__c.field-meta.xml
<CustomField>
    <fullName>Campus_Office_of_Requester__c</fullName>
    <description>Picklist containing various departments, campuses, or offices from which the request may have originated.  Picklist values will always be specific to customer&#39;s use case.</description>
    <inlineHelpText>Picklist containing various departments, campuses, or offices from which the request may have originated.  Picklist values will always be specific to customer&#39;s use case.</inlineHelpText>
    <label>Campus/Office of Requester</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Replace for each customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>