unpackaged/main/default/objects/Advancement_Request__c/fields/Ongoing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Notes__c</fullName>
    <description>Notes field for the person to whom this request is assigned.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes field for the person to whom this request is assigned.</inlineHelpText>
    <label>Ongoing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>