unpackaged/main/default/objects/Advancement_Request__c/fields/Patient_Benefactor__c.field-meta.xml
<CustomField>
    <fullName>Patient_Benefactor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The patient or prospect to whom this request is related</description>
    <inlineHelpText>The patient or prospect to whom this request is related</inlineHelpText>
    <label>Patient/Benefactor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advancement Requests</relationshipLabel>
    <relationshipName>Advancement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>