unpackaged/main/default/objects/Advancement_Request__c/fields/Primary_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Information__c</fullName>
    <description>Field to allow the person submitting an advancement request to explain how the related patient or benefactor would like to be contacted about this matter</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field to allow the person submitting an advancement request to explain how the related patient or benefactor would like to be contacted about this matter</inlineHelpText>
    <label>Primary Contact Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>