unpackaged/main/default/objects/Advancement_Request__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <description>Area for the person creating an advancement request to specify what to do on behalf of the patient or benefactor.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Area for the person creating an advancement request to specify what to do on behalf of the patient or benefactor.</inlineHelpText>
    <label>Request Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>