unpackaged/main/default/objects/Advancement_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Picklist field used to group advancement requests into categories for aid in reporting.</description>
    <inlineHelpText>Picklist field used to group advancement requests into categories for aid in reporting.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replace for each customer</fullName>
            </value>
            <value>
                <fullName>Scheduling Help</fullName>
            </value>
            <value>
                <fullName>Special Treatment</fullName>
            </value>
            <value>
                <fullName>Second Opinion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>